--- a/style.css
+++ b/style.css
@@ -1,65 +1,134 @@
+body{
+  display: inline-flexbox;
+}
+
 header {
   background-color: #F1F1F1;
   text-align: center;
-  padding: 10px;
+  padding: 1%;
+  font-size: 200%;
 }
 
-/* The navbar container */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  list-style-type: none;
-  margin: 0 0 0 0;
+
+@media screen and (max-width: 599px) {
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+    list-style-type: none;
+    margin: 0 0 0 0;
+    position: relative;
+  }
+  /* Navbar links */
+  .topnav #myLinks {
+    display: none;
+  }
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: #333;
+    display: block;
+    right: 0;
+    top: 0;
+    float: right;
+    position: absolute;
+  }
+  .topnav a.icon:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 125%;
+  }
+  .topnav div a {
+    float: right;
+    display: none;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 125%;
+    position: absolute;
+  }
+
+
+  /* Links - change color on hover */
+  .topnav div a:hover {
+    background-color: #ddd;
+    color: black;
+  }
 }
 
-/* Navbar links */
-.topnav li a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+@media screen and (min-width: 600px) {
+  /* The navbar container */
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+    list-style-type: none;
+    margin: 0 0 0 0;
+  }
 
-/* Links - change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: none;
+    right: 0;
+    top: 0;
+  }
 
-.navbar{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 60px;
-}
+  .topnav a{
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 125%;
+  }
 
-.navbar li a{
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
+  /* Navbar links */
+  .topnav div a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 125%;
+  }
+
+  /* Links - change color on hover */
+  .topnav div a:hover {
+    background-color: #ddd;
+    color: black;
+  }
 }
 
 .title-a{
-    color:red;
-    position: relative;
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 .title-b{
-    position: relative;
-    margin-top: 0px;
+  padding-right:1.5%;
+  margin-top: 0px;
 }
 
 .contact-a{
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .contact-b{
-    margin-top: 0px;
+  margin-top: 0px;
 }
 
 .experience{
   margin: 50px 0px 0px 0px;
+}
+
+.container {
+  display: grid;
 }
