--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
   margin: 0 0 0 0;
 }
 
+div{
+  border-style: dashed;
+}
+
 header {
   background-color: #F1F1F1;
   text-align: center;
@@ -10,11 +14,8 @@ header {
   font-size: 200%;
 
 }
-@media (min-width: 768px){
-  /* .nav-link{
-    font-size: 20px;
-  } */
-}
+
+
 
 .img1{
   width:200px;
@@ -34,31 +35,41 @@ header {
 
 .contant-info{
   margin: 0 0 0 0;
-  display: block;
-  flex-flow: row wrap;
-}
-.contant-info h4{
-  margin: 0 0 0 0;
-  position: relative;
-}
-.contant-info h5{
-  margin: 0 0 0 0;
-  position: relative;
+  display: inline-flexbox;
+  flex-wrap: wrap;
+  justify-content:space-evenly;
+  align-items: flex-start;
+  align-content: flex-start;
+  max-width: 600px;
 }
 
 .map-responsive{
   overflow:hidden;
-  padding-bottom:56.25%;
+  padding-bottom:50%;
   position:relative;
   height:0;
 }
 .map-responsive iframe{
   left:0;
   top:0;
-  height:100%;
   width:100%;
+  height:100%;
   position:absolute;
 }
+
+.contant{
+  float: left;
+}
+
+.contant-info .contant h4{
+  margin: 0 0 0 0;
+  position: relative;
+}
+.contant-info .contant h5{
+  margin: 0 0 0 0;
+  position: relative;
+}
+
 
 .experience{
   margin: 50px 0px 0px 0px;
